--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,12 @@ body {
 }
 
 .App {
-  text-align: center;
   max-width: 728px;
   margin: 0 auto;
+}
+
+.login-page {
+  text-align: center;
 }
 
 .App header {
@@ -168,7 +171,6 @@ p {
   background: #0b93f6;
 }
 
-
 .sent .message-container {
   display: flex;
   flex-direction: column;
@@ -188,6 +190,15 @@ p {
 
 .received .author-details {
   justify-content: start;
+}
+
+.time {
+  font-size: .5rem;
+  color: #ddd;
+}
+
+.received .time {
+  text-align: unset;
 }
 
 img {
