--- a/src/App.css
+++ b/src/App.css
@@ -110,7 +110,7 @@ button:disabled {
   color: #fff;
   font-size: 1.25rem;
   margin: 0 auto;
-  margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
   font-weight: bold;
   width: 500px;
   text-align: left;
@@ -185,7 +185,7 @@ p {
 .author-details {
   display: flex;
   align-items: center;
-  font-size: .75rem;
+  font-size: 0.75rem;
 }
 
 .received .author-details {
@@ -193,7 +193,7 @@ p {
 }
 
 .time {
-  font-size: .5rem;
+  font-size: 0.5rem;
   color: #ddd;
 }
 
@@ -206,4 +206,34 @@ img {
   height: 20px;
   border-radius: 50%;
   margin: 2px 5px;
+}
+
+.error-messages {
+  color: red;
+  margin-bottom: 1rem;
+}
+
+.google-span {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.display-name {
+  color: white;
+}
+
+a {
+  color: inherit;
+}
+
+.sign-in-google {
+  margin-bottom: 1rem;
+  opacity: 0;
+}
+
+h2 {
+  color: #fff;
+  font-size: 2.5rem;
+  margin: 0;
+  margin-bottom: 1rem;
 }
